--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
-    android:padding="16dp"
     android:background="@drawable/background_rect"
     android:elevation="4dp"
-    android:outlineAmbientShadowColor="#000000"
     android:orientation="horizontal"
-    >
+    android:outlineAmbientShadowColor="#000000"
+    android:padding="16dp">
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginRight="4dp">
+        android:layout_marginRight="4dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <ImageView
             android:id="@+id/news_image"
             android:layout_width="match_parent"
@@ -37,40 +37,41 @@
             android:id="@+id/headline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="This is gonna be the headline of the news."
             android:fontFamily="sans-serif"
             android:gravity="left"
-            android:textSize="16sp"
             android:textColor="#000000"
-            />
+            android:textSize="16sp"
+            tools:text="This is gonna be the headline of the news." />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginTop="2dp">
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal">
 
             <TextView
-                android:paddingHorizontal="4dp"
                 android:id="@+id/date"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                tools:text="2018-08-13"
+                android:layout_weight="1"
                 android:fontFamily="sans-serif"
-                android:textSize="12sp"
+                android:gravity="right"
+                android:paddingHorizontal="4dp"
                 android:textColor="#000000"
-                />
+                android:textSize="12sp"
+                tools:text="2018-08-13" />
+
             <TextView
                 android:id="@+id/time"
-                android:paddingHorizontal="4dp"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                tools:text="20:12:10"
+                android:layout_weight="1"
                 android:fontFamily="sans-serif"
-                android:textSize="12sp"
+                android:gravity="right"
+                android:paddingHorizontal="4dp"
                 android:textColor="#000000"
-                />
+                android:textSize="12sp"
+                tools:text="20:12:10" />
         </LinearLayout>
 
     </LinearLayout>
