--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -30,7 +30,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="6dp">
 
 
         <TextView
@@ -57,7 +58,7 @@
                 android:fontFamily="sans-serif"
                 android:gravity="right"
                 android:paddingHorizontal="4dp"
-                android:textColor="#000000"
+                android:textColor="@color/colorAccent"
                 android:textSize="12sp"
                 tools:text="2018-08-13" />
 
@@ -69,7 +70,7 @@
                 android:fontFamily="sans-serif"
                 android:gravity="right"
                 android:paddingHorizontal="4dp"
-                android:textColor="#000000"
+                android:textColor="@color/colorAccent"
                 android:textSize="12sp"
                 tools:text="20:12:10" />
         </LinearLayout>
