--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="2dp"
     android:background="@drawable/background_rect"
     android:elevation="4dp"
@@ -21,10 +22,13 @@
         <ImageView
             android:id="@+id/news_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            tools:src="@raw/sample"
+            android:scaleType="centerCrop"/>
 
 
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="0dp"
@@ -38,7 +42,7 @@
             android:id="@+id/headline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
+            android:fontFamily="@font/lobster_two_bold"
             android:gravity="left"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -56,23 +60,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="sans-serif"
-                android:gravity="right"
+                android:gravity="center"
                 android:paddingHorizontal="4dp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="12sp"
                 tools:text="2018-08-13" />
 
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif"
-                android:gravity="right"
-                android:paddingHorizontal="4dp"
-                android:textColor="@color/colorAccent"
-                android:textSize="12sp"
-                tools:text="20:12:10" />
+
         </LinearLayout>
 
     </LinearLayout>
